--- a/style.css
+++ b/style.css
@@ -4,20 +4,40 @@ html, body{
     height: 100%;
     width: 100%;
     font-family: 'Belanosima', sans-serif;
+    background-color: #F3DDF2;
 }
 
 .button{
     padding: 20px;
     margin: 0 3px;
     border: 2px solid black;
-    border-radius: 9px;
+    border-radius: 42px;
+    font-weight:bold;
+    background-color: #81eded;
     cursor: pointer;
     width: 66px;
 }
+/* Responsive styles for smaller screens */
+@media (max-width: 768px) {
+    .button {
+        padding: 10px;
+        margin: 0 2px;
+        font-size: 16px;
+        width: 45px;
+    }
+}
 
+.input{
+    height: 100%;
+    width: 100%;
+}
+    @media (max-width: 768px){
+        .input {
+width: 80px;
+}}
 .button:active {
     background-color: black;
-    color: #fff;
+    color: #81eded;
   }
 
 .row{
@@ -31,4 +51,10 @@ html, body{
     padding: 10px 38px;
     border: 2px solid black;
     border-radius: 9px;
+}
+@media (max-width: 768px) {
+    .input {
+        width: 160px;
+        font-size: 16px;
+    }
 }
