Change color of arithmetic Buttons a bit to make usage more intuitive

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ cursor:pointer;
     width: 66px;
 }
 
+.button.arithmetic {
+    background: #59d1c7;
+    font-size: 17px;
+}
 /* Responsive styles for smaller screens */
 @media (max-width: 768px) {
     .button {
