Add Icon (trash bin) to clear `Calculation History` An an mouseover info to the icon

--- a/style.css
+++ b/style.css
@@ -26,7 +26,12 @@ height: 30px;
 cursor:pointer;
 
 }
-
+.historyHeadline{
+    text-align:center;
+}
+.clearHistory{
+    cursor: pointer;
+}
 
 .button {
     padding: 20px;
