--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
 
 :root {
   --primary-color: #e3f9ff;
-  --secondary-color: rgb(35, 67, 88);
+  --secondary-color: #212121;
+  --btn-color: #83b4b1;
 }
 .dark-theme {
   --primary-color: #212121;
-  --secondary-color: #141013;
+  --secondary-color: #e3f9ff;
+  --btn-color: #83b4b1;
 }
 
 body {
-  height: 100%;
-  font-family: "Belanosima", sans-serif;
-  background-color: var(--primary-color);
+	background-color: var(--primary-color);
+}
+
+h1 {
+  color: var(--secondary-color);
 }
 
 #icon {
@@ -23,82 +27,68 @@ body {
   cursor: pointer;
 }
 
+body div.mycalc {
+	text-align: center;
+	width: 300px;
+	margin: 0 auto;
+}
+
+div input[type='button'], button {
+	width: 72px;
+	height: 72px;
+	margin: 2px 0;
+}
+
+div input[type="text"] {
+	height: 50px;
+	width: 100%;
+	padding: 12px 20px;
+  font-size: 20px;
+  margin-bottom: 4px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid rgb(66, 66, 66);
+}
+
+div.results input, div.results button {
+	height: 50px;
+	width: 104px;
+}
+
+div.results button {
+	background-color: red;
+	color: #fff;
+	border: 1px solid red;
+}
+
+div.results input {
+	background-color: #fd7202;
+	color: #fff;
+	border: 1px solid #fd7202;
+}
+
+.arithmetic {
+  background: var(--btn-color);
+  font-size: 16px;
+  border: 1.2px solid rgb(66, 66, 66);
+}
+
+.history {
+  width: 100%;
+  color: var(--secondary-color);
+}
+
+#history-list {
+  text-align: left;
+  color: var(--secondary-color);
+}
+
 .historyHeadline {
   text-align: center;
 }
 
 .clearHistory {
   cursor: pointer;
-}
-
-.button {
-  width: 50px;
-  height: 50px;
-  border: none;
-  outline: none;
-  padding: 10px;
-  border-radius: 0.5rem;
-  margin: 0.3rem;
-  box-shadow: 2px 5px 20px #000;
-  background: transparent;
-  font-size: 20px;
-  color: #fff;
-  cursor: pointer;
-}
-
-.button.arithmetic {
-  background: #83b4b1;
-  font-size: 17px;
-}
-
-/* Responsive styles for smaller screens */
-@media screen and (max-width: 768px) {
-  .cal-outer-body {
-    width: 350px;
-  }
-}
-
-.input {
-  height: 100%;
-  width: 100%;
-}
-
-.button:active {
-  background-color: black;
-  color: #81eded;
-}
-
-.button:hover {
-  /* added a button hover effect */
-  background-color: #000000;
-  opacity: 0.7;
-}
-
-.row {
-  margin: 8px 0;
-}
-
-.row input {
-  width: 225px;
-  font-size: 20px;
-  margin: 0;
-  padding: 10px 38px;
-  border: none;
-  border-radius: 5px;
-}
-
-.cal-outer-body {
-  display: block;
-  margin: 0 auto;
-  width: 400px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  background: var(--secondary-color);
-  border-radius: 10px;
-  color: #fff;
-}
-
-.cal-inner-body {
-  padding: 10px;
 }
 
 .shake {
