--- a/style.css
+++ b/style.css
@@ -15,12 +15,24 @@ body {
   background-color: var(--primary-color);
 }
 
-#icon {
+#icon, #volumeIcon {
   margin-left: 30px;
   margin-top: 10px;
+  margin-bottom: 10px;
   width: 30px;
   height: 30px;
   cursor: pointer;
+}
+
+#icon:hover, #volumeIcon:hover {
+  background-color: #9a9a9a;
+  border-radius: 25%;
+}
+
+#volumeIcon {
+  margin-right: 30px;
+  margin-left: 0px;
+  float: right;
 }
 
 .historyHeadline {
